--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
     "strict": true,
-    "module": "es2020",
+    "module": "commonjs",
     "target": "es2020",
     "lib": ["es2020"],
-    "moduleResolution": "Node",
     "outDir": "./dist",
     "declaration": true,
     "resolveJsonModule": true,
